fixed and updated tours - added scrollbars, updated text, and updated data targets

--- a/wifiScout/www/css/channelTable.css
+++ b/wifiScout/www/css/channelTable.css
@@ -33,3 +33,19 @@
 .resize {
   display: none;
 }
+
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, .25);
+  border: none;
+  border-radius: 10px;
+  
+}
+
+::-webkit-scrollbar-track {
+  background-color: #ffffff;
+  border-radius: 10px;
+}
